<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/account_login"
        android:textColor="@color/secondary_black"
        android:textSize="26sp"

        app:layout_constraintBottom_toTopOf="@id/edit_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/login_supporting_text"
        android:textColor="@color/secondary_grey"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat_medium"
        android:labelFor="@id/edit_login_email"
        android:text="@string/email"

        app:layout_constraintBottom_toTopOf="@id/edit_login_email"
        app:layout_constraintStart_toStartOf="@id/edit_login_email" />

    <EditText
        android:id="@+id/edit_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:textSize="14sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat_medium"
        android:labelFor="@id/edit_login_password"
        android:text="@string/password"

        app:layout_constraintBottom_toTopOf="@id/edit_login_password"
        app:layout_constraintStart_toStartOf="@id/edit_login_password" />

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:paddingEnd="35dp"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_login_email"
        tools:ignore="RtlSymmetry" />

    <ToggleButton
        android:id="@+id/login_toggle_password"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:background="@color/transparent"
        android:drawableStart="@drawable/outline_remove_red_eye_24"
        android:padding="3dp"

        app:layout_constraintBottom_toBottomOf="@id/edit_login_password"
        app:layout_constraintEnd_toEndOf="@id/edit_login_password"
        app:layout_constraintTop_toTopOf="@id/edit_login_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/transparent"
        android:text="@string/forgot_password"
        android:textColor="@color/primary_violet"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_login_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_color"
        android:enabled="false"
        android:fontFamily="@font/montserrat_medium"
        android:paddingVertical="20dp"
        android:text="@string/login"
        android:textColor="@color/primary_light_grey"

        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_forgot" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_google_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/transparent"
        android:drawableLeft="@drawable/google"
        android:fontFamily="@font/montserrat_medium"
        android:paddingVertical="20dp"
        android:text="@string/login_google"

        android:textColor="@color/primary_violet"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:strokeColor="@color/primary_grey"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/montserrat_medium"
        android:paddingVertical="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/primary_violet"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_google_login" />

</androidx.constraintlayout.widget.ConstraintLayout>