<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat_medium"
        android:labelFor="@id/edit_signup_email"
        android:text="@string/email"

        app:layout_constraintBottom_toTopOf="@id/edit_signup_email"
        app:layout_constraintStart_toStartOf="@id/edit_signup_email" />

    <EditText
        android:id="@+id/edit_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:textSize="14sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat_medium"
        android:labelFor="@id/edit_signup_password"
        android:text="@string/create_password"

        app:layout_constraintBottom_toTopOf="@id/edit_signup_password"
        app:layout_constraintStart_toStartOf="@id/edit_signup_password" />

    <EditText
        android:id="@+id/edit_signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:paddingEnd="35dp"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_signup_email"
        tools:ignore="RtlSymmetry" />

    <ToggleButton
        android:id="@+id/signup_toggle_password"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:background="@color/transparent"
        android:drawableStart="@drawable/outline_remove_red_eye_24"
        android:padding="3dp"

        app:layout_constraintBottom_toBottomOf="@id/edit_signup_password"
        app:layout_constraintEnd_toEndOf="@id/edit_signup_password"
        app:layout_constraintTop_toTopOf="@id/edit_signup_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat_medium"
        android:labelFor="@id/edit_signup_password_confirm"
        android:text="@string/confirm_password"

        app:layout_constraintBottom_toTopOf="@id/edit_signup_password_confirm"
        app:layout_constraintStart_toStartOf="@id/edit_signup_password_confirm" />

    <EditText
        android:id="@+id/edit_signup_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:paddingEnd="35dp"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_signup_password"

        tools:ignore="RtlSymmetry" />

    <ToggleButton
        android:id="@+id/signup_toggle_password_confirm"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:background="@color/transparent"
        android:drawableStart="@drawable/outline_remove_red_eye_24"
        android:padding="3dp"

        app:layout_constraintBottom_toBottomOf="@id/edit_signup_password_confirm"
        app:layout_constraintEnd_toEndOf="@id/edit_signup_password_confirm"
        app:layout_constraintTop_toTopOf="@id/edit_signup_password_confirm" />

    <CheckBox
        android:id="@+id/checkbox_confidence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/confidence_politics"
        android:textSize="12sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_signup_password_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>