<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/primary_violet"
        android:textSize="34sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/splash_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"

        app:layout_constraintStart_toStartOf="@id/splash_title"
        app:layout_constraintTop_toBottomOf="@id/splash_title" />


    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/splash_logo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_start_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/primary_violet"
        android:fontFamily="@font/montserrat_medium"
        android:paddingVertical="20dp"
        android:text="@string/login"
        android:textColor="@color/primary_light_grey"
        app:cornerRadius="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_logo"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_start_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/montserrat_medium"
        android:paddingVertical="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/primary_violet"

        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_start_login"
        app:layout_constraintVertical_bias="0.3"
        app:strokeColor="@color/primary_grey"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>